# leptos_csr

./: .gitignore  Cargo.toml  Trunk.toml  index.html  input.css  package.json  styles.css  tailwind.config.ts
src/: lib.rs  main.rs
src/components/: counter_btn.rs  mod.rs
src/components/ui/: button.rs  card.rs  input.rs  label.rs  mod.rs
src/pages/: home.rs  login.rs  mod.rs  not_found.rs
